# OpenGL

./: .gitignore
Code/OpenGL/: CMakeLists.txt
Code/OpenGL/OpenGL/: glad.c  main.cpp
Code/OpenGL/include/glad/: glad.h
Code/OpenGL/lib/: glfw3.lib
